<resources>
    <string name="app_name">RelaxUC</string>
    <string name="unsuccessful_error">"Ocurrió un error al conectarse con el servidor."</string>
    <string name="failed_download_json">"Ocurrió un error al conectarse con el servidor."</string>
    <string name="download">Descargar</string>
    <string name="downloaded">Descargado/a.</string>
    <string name="file_not_downloaded">Archivo no descargado.</string>
    <string name="downloading">Descargando...</string>
    <string name="zero_files_downloaded">No hay archivos descargados.</string>
    <string name="inhale">Inhala</string>
    <string name="exhale">Exhala</string>
    <string name="square_breathing_hold">Mantén</string>
    <string name="main_menu_sequences">Relaja tu cuerpo</string>
    <string name="main_menu_exercises">Ejercicios de respiración</string>
    <string name="main_menu_ambience">Escoge tu video</string>
    <string name="main_menu_imaginary">Relaja tu mente</string>
    <string name="main_menu_evaluations">Evaluate</string>
    <string name="main_menu_exercise_plans">Programas semanales</string>
    <string name="drawer_home">Inicio</string>
    <string name="drawer_profile">Perfil</string>
    <string name="drawer_settings">Ajustes</string>
    <string name="drawer_request_appointment">Reserva tu hora</string>
    <string name="drawer_logout">Cerrar sesión</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Cerrar menu</string>
    <string name="drawer_check_appointment">Consulta tus reservas</string>
    <string name="error_401">"Vuelve a iniciar sesión"</string>
    <string name="auth_email">Correo UC</string>
    <string name="auth_password">Contraseña</string>
    <string name="auth_login">Ingresar</string>
    <string name="auth_login_remember_me">Recuerdame</string>
    <string name="auth_register">Registrar</string>
    <string name="auth_register_password_confirmation">Confirma la contraseña</string>
    <string name="auth_register_rut">Rut (Sin código verificador)</string>
    <string name="auth_register_age">Edad</string>
    <string name="auth_register_career">Unidad</string>
    <string name="auth_register_year">Año ingreso</string>
    <string name="auth_register_name">Nombre</string>
    <string name="auth_register_academic_type_error">Tipo es requerido</string>
    <string name="auth_register_sex_error">Género es requerido</string>
    <string name="auth_register_career_error">Unidad es requerida</string>
    <string name="auth_register_rut_error">Rut es inválido</string>
    <string name="auth_error_invalid_email">El correo debe ser UC.</string>
    <string name="auth_error_invalid_password">La contraseña es muy corta</string>
    <string name="auth_error_incorrect_password">La contraseña es incorrecta</string>
    <string name="auth_error_incorrect_password_confirmation">Las contraseñas deben ser iguales</string>
    <string name="auth_error_field_required">Este campo es requerido</string>
    <string name="auth_confirmation_email">Se envió un email de confirmación a tu correo. Sigue las instrucciones para que seas activado/a.</string>
    <string name="auth_confirmation_ok">Entiendo</string>
    <string name="auth_welcome_message">"Bienvenido a RelaxUC, %1$s.</string>
    <string name="sequences">Relaja tu cuerpo</string>
    <string name="sequences_cancel_confirmation">"¿Estás seguro/a que quieres cancelar el ejercicio?"</string>
    <string name="sequences_cancel_confirmation_cancel">"Si"</string>
    <string name="sequences_cancel_confirmation_revert">"No"</string>
    <string name="sequences_help_description">Descripción</string>
    <string name="sequences_help_close">Cerrar</string>
    <string name="saved_sound_state">Sound state</string>
    <string name="start_sound_button">Playing</string>
    <string name="stop_sound_button">Stopped</string>
    <string name="pause_sound_button">Paused</string>
    <string name="ambiental_sound_button_constant">Ambiental</string>
    <string name="name_evaluation_1">Evalua Ansiedad</string>
    <string name="name_evaluation_2">Evalua Estres</string>
    <string name="name_evaluation_3">Evalua tu Sueño</string>
    <string name="tag_answer_T1">1</string>
    <string name="tag_answer_T2">2</string>
    <string name="tag_answer_T3">3</string>
    <string name="tag_answer_T4">4</string>
    <string name="tag_answer_T5">5</string>
    <string name="answer_T1_a">Nunca</string>
    <string name="answer_T1_b">Casi nunca</string>
    <string name="answer_T1_c">De vez en cuando</string>
    <string name="answer_T1_d">A menudo</string>
    <string name="answer_T1_e">Muy a menudo</string>
    <string name="answer_T2_a">Nunca</string>
    <string name="answer_T2_b">Varios días</string>
    <string name="answer_T2_c">Más de la mitad de los días</string>
    <string name="answer_T2_d">Casi todos los días</string>
    <string name="stress_evaluation">Evaluación de estrés</string>
    <string name="anxiety_evaluation">Evaluación de ansiedad</string>
    <string name="sleeping_evaluation">Evaluación de calidad del sueño</string>
    <string name="home_start_now">Comenzar a relajarme</string>
    <string name="square_breathing">Respiración cuadrada</string>
    <string name="evaluations">Evaluaciones disponibles</string>
    <string-array name="evaluations_types">
        <item>@string/stress_evaluation</item>
        <item>@string/anxiety_evaluation</item>
        <item>@string/sleeping_evaluation</item>
    </string-array>
    <string name="evaluation_results">Resultados de evaluación</string>
    <string name="stress_1_student">Has podido afrontar y adaptarte a situaciones demandantes en el
    último mes. , Identifica lo que te ha ayudado hasta ahora para mantener niveles
    bajos de estrés y así poder seguir utilizando esos recursos cada vez que los
    necesites. Para que tu nivel no aumente, te recomendamos organizar tus tiempos
    acorde a tus demandas, priorizar tareas y equilibrar tu estilo de vida con
    actividades que posibiliten tu recreación y descanso. Existen diferentes
    actividades realizadas por nuestro programa que te pueden interesar, como lo son
    los talleres de Mindfulness, consejerías de ansiedad y talleres grupales
    “manejando mi ansiedad”. Recuerda que puedes solicitar tu hora online.</string>
    <string name="stress_2_student">En el último mes,  puedes percibir que tu nivel de estrés se ha
    mantenido estable en el tiempo llevándote a sentir irritabilidad, cansancio,
    problemas para dormir, dolores de cabeza, entre otros. Es importante que puedas
    generar cambios para que tu nivel de percepción de estrés disminuya. Revisa las
    demandas que sean modificables y que estén bajo tu control, y asegúrate de
    complementar tus actividades con tiempo de descanso y recreación. Si sientes que
    esto se te dificulta, te recomendamos solicitar una hora de consejería de ansiedad
     o informarte de los servicios que ofrece la universidad. </string>
    <string name="stress_3_student">En el último mes la intensidad de tus síntomas ha logrado interferir
    en algunas áreas de tu vida.  Puedes estar mostrándote irritable, estar teniendo
    insomnio, pesadillas, sintiendo tensión muscular, agotamiento, ansiedad, falta de
    concentración y atención, dificultades para pensar, además de una disminución en
    tus defensas inmunitarias. Mantenerte en este estado puede perjudicarte aún más si
     las condiciones de tu entorno no se modifican. Te recomendamos solicitar una
    opinión profesional dentro del corto plazo para evaluar tu situación. Acércate a
    la Unidad de Apoyo Psicológico ubicada en el 3er piso del Hall Universitario en
    campus San Joaquín o ingresa a http://apoyo.saludestudiantil.uc.cl/ para pedir una hora.</string>
    <string name="stress_1_functionary">Has podido afrontar y adaptarte a situaciones demandantes en el último
     mes. , Identifica lo que te ha ayudado hasta ahora para mantener niveles bajos de
     estrés y así poder seguir utilizando esos recursos cada vez que los necesites.
    Para que tu nivel no aumente, te recomendamos organizar tus tiempos acorde a las
    demandas, priorizar tareas y equilibrar tu estilo de vida con actividades que
    posibiliten tu recreación y descanso. Existen diferentes actividades realizadas
    por nuestro programa que te pueden interesar, como lo son los talleres de yoga
    para funcionarios ofrecidos de manera semanal.  Recuerda que puedes reservar tu cupo online. </string>
    <string name="stress_2_functionary">En el último mes, puedes percibir que tu nivel de estrés se ha
    mantenido estable en el tiempo llevándote a sentir irritabilidad, cansancio,
    problemas para dormir, dolores de cabeza, entre otros. Es importante que puedas
    generar cambios para que tu nivel de percepción de estrés disminuya. Revisa las
    demandas que sean modificables y que estén bajo tu control, y asegúrate de
    complementar tus actividades con tiempo de descanso y recreación. Si tienes dudas
    en relación a este tema, contáctanos a ansiedad@uc.cl</string>
    <string name="stress_3_functionary">En el último mes la intensidad de tus síntomas ha logrado interferir
    en algunas áreas de tu vida.  Puedes estar mostrándote irritable, estar teniendo
    insomnio, pesadillas, sintiendo tensión muscular, agotamiento, ansiedad, falta de
    concentración y atención, dificultades para pensar, además de una disminución en
    tus defensas inmunitarias. Mantenerte en este estado puede perjudicarte aún más si
     las condiciones de tu entorno no se modifican. Te recomendamos solicitar una
    opinión profesional dentro del corto plazo para evaluar tu situación. Si tienes
    alguna duda en relación a tu resultado, escríbenos a ansiedad@uc.cl</string>
    <string name="anxiety_1_student">Tus resultados indican que tienes pocos o ningún síntoma de ansiedad.
     Si bien eso puede ser beneficioso para ti, debes entender que la ansiedad es una
     emoción que te permite activarte, y que presentar bajos niveles puede generar
    conductas pasivas y falta de motivación. Si tienes dudas acerca de tu resultado o
     acerca de la ansiedad, escríbenos a ansiedad@uc.cl. </string>
    <string name="anxiety_2_student">Tus resultados indican que presentas síntomas moderados de ansiedad.
    Según tus respuestas, estos síntomas pueden estar afectando tu diario vivir y
    generándote dificultades en una o más áreas de tu vida.  Te recomendamos hablar
    con un profesional para ver qué puedes hacer para que tus síntomas disminuyan. Es
     importante que sepas que presentar síntomas moderados de ansiedad no equivale a
    tener un trastorno de ansiedad. Puedes solicitar una consejería individual de
    ansiedad o participar de los talleres "Manejando mi ansiedad" a cargo de un
    psicólogo perteneciente al Programa para el Manejo de la Ansiedad y el buen
    dormir. Para mayor información, escríbenos a ansiedad@uc.cl </string>
    <string name="reserve_button">RESERVAR</string>
    <string name="date_start">Fecha:\u0020</string>
    <string name="professional_start">Profesional:\u0020</string>
    <string name="campus_start">Campus:\u0020</string>
    <string name="service_start">Servicio:\u0020</string>
    <string name="location_start">Lugar:\u0020</string>
</resources>