<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/auth_card_view_width"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/card_view_elevation"
    app:cardUseCompatPadding="true"
    android:layout_gravity="center_horizontal"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/card_view_text_margin_top_bottom_increased"
        android:layout_marginLeft="@dimen/card_view_text_margin_left_right"
        android:layout_marginRight="@dimen/card_view_text_margin_left_right"
        android:layout_marginTop="@dimen/card_view_text_margin_top_bottom_increased"
        android:orientation="vertical"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/auth_email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/auth_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_password"
                android:inputType="textPassword"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/auth_register_password_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_register_password_confirmation"
                android:inputType="textPassword"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/auth_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_register_name"
                android:inputType="text"
                android:maxLines="1"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/auth_register_rut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_register_rut"
                android:inputType="number"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/auth_register_academic_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_view_text_margin_top_bottom"
            android:layout_marginBottom="@dimen/card_view_text_margin_top_bottom"
            />

        <Spinner
            android:id="@+id/auth_register_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_view_text_margin_top_bottom"
            android:layout_marginBottom="@dimen/card_view_text_margin_top_bottom"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/auth_register_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_register_age"
                android:inputType="number"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>


        <Spinner
            android:id="@+id/auth_register_career"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_view_text_margin_top_bottom"
            android:layout_marginBottom="@dimen/card_view_text_margin_top_bottom"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/auth_register_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_register_year"
                android:inputType="number"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/auth_register_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_view_text_margin_top_bottom"
            android:layout_marginRight="@dimen/auth_card_view_bottom_margin_left_right"
            android:layout_marginLeft="@dimen/auth_card_view_bottom_margin_left_right"
            android:text="@string/auth_register"
            android:textStyle="bold" />
    </LinearLayout>
</android.support.v7.widget.CardView>