<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/auth_card_view_width"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/card_view_elevation"
    app:cardUseCompatPadding="true"
    android:layout_gravity="center"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/card_view_text_margin_top_bottom_increased"
        android:layout_marginLeft="@dimen/card_view_text_margin_left_right"
        android:layout_marginRight="@dimen/card_view_text_margin_left_right"
        android:layout_marginTop="@dimen/card_view_text_margin_top_bottom_increased"
        android:orientation="vertical"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/auth_email_layout"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/auth_email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/auth_password_layout"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/auth_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_view_text_margin_top_bottom"
                android:hint="@string/auth_password"
                android:inputType="textPassword"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>
        <CheckBox
            android:text="@string/auth_login_remember_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_view_text_margin_top_bottom"
            android:id="@+id/auth_remember_me"
            android:checked="true"/>
        <Button
            android:id="@+id/auth_login_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_view_text_margin_top_bottom"
            android:layout_marginRight="@dimen/auth_card_view_bottom_margin_left_right"
            android:layout_marginLeft="@dimen/auth_card_view_bottom_margin_left_right"
            android:text="@string/auth_login"
            android:textStyle="bold"
            />
    </LinearLayout>
</android.support.v7.widget.CardView>