<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="18dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/service_start"
                android:id="@+id/serviceInfo"
                android:layout_weight="1"/>

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/serviceText"
                android:layout_weight="1"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/professional_start"
                android:id="@+id/profInfo"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="Dummy label"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:id="@+id/profText"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/date_start"
                android:id="@+id/dateInfo"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="Dummy label"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:id="@+id/dateText"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/campus_start"
                android:id="@+id/campusInfo"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="Dummy label"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:id="@+id/campusText"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="18dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/location_start"
                android:id="@+id/locationInfo"
                android:layout_weight="1"/>

            <TextView
                android:text="TextViewasdasd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/locationText"/>

        </LinearLayout>

        <Button
            android:id="@+id/appointmentButton"
            android:text="@string/reserve_button"
            android:textColor="@color/cyan_700"
            android:layout_weight="1"
            android:layout_marginRight="16dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"/>

    </LinearLayout>

</RelativeLayout>